Added UI components

--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "plugins": [
       "expo-router"
     ],
+    "newArchEnabled": true,
     "name": "react-native-sitemate-exam",
     "slug": "react-native-sitemate-exam"
   }
