--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "expo": "^52.0.16",
     "expo-constants": "~17.0.2",
     "expo-linking": "~7.0.2",
